# CNIDS

./: README.md
src/: CMakeLists.txt
src/html/: annotated.html  class_pig-members.html  class_pig.html  classes.html  files.html  main_8h_source.html  menudata.js
src/html/search/: classes_0.js
src/latex/: annotated.tex  class_pig.tex  refman.tex
src/log/: text_log.cc  text_log.h
src/loggers/: alert_csv.cc  alert_fast.cc  alert_full.cc
src/main/: snort.cc  snort_config.cc  snort_config.h
src/networkStructure/: CMakeLists.txt  DiGenNode.cpp  DiGenNode.h  DiNode.cpp  DiNode.h  Edge.h  Element.h  GenEdge.cpp  GenEdge.h  GenNode.cpp  GenNode.h  Interaction.h  Iterator.h  ListNetwork.h  Network.h  Node.h  S_DiNet_InCore.cpp  S_DiNet_InCore.h  S_List_Array.h  S_List_Map.h  S_Net_InCore.cpp  S_Net_InCore.h  SimpleEdge.cpp  SimpleEdge.h  SimpleNode.cpp  SimpleNode.h
src/parser/: parse_conf.cc  parse_conf.h  parse_stream.cc  parser.cc
src/predictionSnort/: .cproject  .project  .writeNetwork.cpp.swp  AlertNetwork.cpp  AlertNetwork.h  CMakeLists.txt  ElementRule.cpp  ElementRule.h  InteractionRule.cpp  InteractionRule.h  NodeRule.cpp  NodeRule.h  parseRuleNetwork.cpp  parseRuleNetwork.h  writeNetwork.cpp  writeNetwork.h
src/utils/: stats.cc  stats.h
