
add_library (networkStructure OBJECT
    DiGenNode.cpp
    DiGenNode.h
    DiNode.cpp
    DiNode.h
    Edge.h
    Element.h
    FSBAllocator.h
    GenEdge.cpp
    GenEdge.h
    GenNode.cpp
    GenNode.h
    Interaction.h
    Iterator.h
    ListNetwork.h
    Network.h
    Node.h
    S_DiNet_InCore.cpp
    S_DiNet_InCore.h
    SimpleEdge.cpp
    SimpleEdge.h
    SimpleNode.cpp
    SimpleNode.h
    S_List_Array.h
    S_List_Map.h
    S_Net_InCore.cpp
    S_Net_InCore.h
)

